# files_to_md

./: README.md  file_to_md.py  main.py  pdf_ocr.py  pyproject.toml
